<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_secondary"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            tools:src="@drawable/duck_00"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/info_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/common_spacing_large"
            app:cardBackgroundColor="@color/common_bg_primary"
            app:cardCornerRadius="@dimen/common_corner_radius_large"
            app:layout_constraintTop_toBottomOf="@id/info_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_spacing_large">

                <TextView
                    style="@style/TextStyle.Header"
                    android:id="@+id/info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/duck_title_00"/>

                <TextView
                    style="@style/TextStyle.Info"
                    android:id="@+id/info_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/common_spacing_large"
                    app:layout_constraintTop_toBottomOf="@id/info_title"
                    tools:text="@string/duck_desc_00"/>

                <TextView
                    style="@style/TextStyle.Price"
                    android:id="@+id/info_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/common_spacing_large"
                    app:layout_constraintTop_toBottomOf="@id/info_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="1500 ₽"/>

                <com.yandex.pay.widgets.info.api.view.YPaySimpleWidgetView
                    android:id="@+id/info_widget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/common_spacing_large"
                    app:ypay_simple_widget_style="transparent"
                    app:layout_constraintTop_toBottomOf="@id/info_price"/>

                <TextView
                    style="@style/TextStyle.Info.PrimaryButton"
                    android:id="@+id/info_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_button_large"
                    android:layout_marginVertical="@dimen/common_spacing_large"
                    android:text="@string/button_add_to_cart"
                    app:layout_constraintTop_toBottomOf="@id/info_widget"/>

                <TextView
                    style="@style/TextStyle.Info.StrokeButton"
                    android:id="@+id/info_in_cart"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/button_in_the_cart"
                    app:layout_constraintStart_toStartOf="@id/info_button"
                    app:layout_constraintEnd_toEndOf="@id/info_button"
                    app:layout_constraintTop_toTopOf="@id/info_button"
                    app:layout_constraintBottom_toBottomOf="@id/info_button"
                    tools:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextStyle.Info"
            android:id="@+id/info_copyright"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_button_large"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/common_text_disabled"
            app:layout_constraintTop_toBottomOf="@id/info_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
