<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_primary"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextStyle.Header"
            android:id="@+id/cart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing_large"
            android:text="@string/title_your_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextStyle.Info"
            android:id="@+id/cart_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_empty_cart"
            app:layout_constraintTop_toBottomOf="@id/cart_title"
            app:layout_constraintStart_toStartOf="@id/cart_title"
            tools:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cart_empty"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cart_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing_large"
            app:cardCornerRadius="@dimen/common_corner_radius_large"
            app:cardBackgroundColor="@color/common_bg_secondary"
            app:layout_constraintTop_toBottomOf="@id/cart_recycler">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_spacing_large">

                <TextView
                    style="@style/TextStyle.Price"
                    android:id="@+id/cart_your_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_your_order"
                    app:layout_constraintBottom_toTopOf="@id/cart_info_widget"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    style="@style/TextStyle.Price"
                    android:id="@+id/cart_total_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/cart_your_order"
                    app:layout_constraintBottom_toBottomOf="@id/cart_your_order"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="3000 ₽"/>

                <com.yandex.pay.widgets.info.api.view.YPayInfoWidgetView
                    android:id="@+id/cart_info_widget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/common_spacing_large"
                    app:layout_constraintTop_toBottomOf="@id/cart_your_order"/>

                <TextView
                    style="@style/TextStyle.Info.PrimaryButton"
                    android:id="@+id/cart_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_button_large"
                    android:layout_marginVertical="@dimen/common_spacing_large"
                    app:layout_constraintTop_toBottomOf="@id/cart_info_widget"/>

                <ProgressBar
                    android:id="@+id/cart_button_progress"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:indeterminateTint="@color/common_text_inverted"
                    app:layout_constraintStart_toStartOf="@id/cart_button"
                    app:layout_constraintEnd_toStartOf="@id/cart_button_title"
                    app:layout_constraintTop_toTopOf="@id/cart_button"
                    app:layout_constraintBottom_toBottomOf="@id/cart_button"
                    app:layout_constraintHorizontal_chainStyle="packed"/>

                <TextView
                    style="@style/TextStyle.Info.Inverted"
                    android:id="@+id/cart_button_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_spacing_small"
                    android:text="@string/button_checkout"
                    app:layout_constraintStart_toEndOf="@id/cart_button_progress"
                    app:layout_constraintEnd_toEndOf="@id/cart_button"
                    app:layout_constraintTop_toTopOf="@id/cart_button"
                    app:layout_constraintBottom_toBottomOf="@id/cart_button"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextStyle.Info"
            android:id="@+id/info_copyright"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_button_large"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/common_text_disabled"
            app:layout_constraintTop_toBottomOf="@id/cart_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
