<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="@dimen/common_corner_radius_large">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_main_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1:2"
            android:background="@color/common_bg_secondary"/>

        <ImageView
            android:id="@+id/item_main_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            tools:src="@drawable/duck_00"/>

        <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/item_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_main_image"
            tools:text="@string/duck_title_00"/>

        <TextView
            style="@style/TextStyle.Price"
            android:id="@+id/item_main_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_main_title"
            tools:text="1500 ₽"/>

        <com.yandex.pay.widgets.badge.api.view.YPayBadgeView
            android:id="@+id/item_main_badge_split"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_badge_height"
            android:layout_marginHorizontal="@dimen/common_spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_main_price"
            app:layout_constraintBottom_toTopOf="@id/item_main_badge_cashback"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.yandex.pay.widgets.badge.api.view.YPayBadgeView
            android:id="@+id/item_main_badge_cashback"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_badge_height"
            android:layout_marginTop="@dimen/common_spacing_small"
            android:layout_marginHorizontal="@dimen/common_spacing_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_main_badge_split"
            app:layout_constraintBottom_toTopOf="@id/item_main_button"/>

        <TextView
            style="@style/TextStyle.Info.InvertedButton"
            android:id="@+id/item_main_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_button_small"
            android:layout_margin="@dimen/common_spacing_large"
            android:text="@string/button_add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            style="@style/TextStyle.Info.StrokeButton"
            android:id="@+id/item_main_in_cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/button_in_the_cart"
            app:layout_constraintTop_toTopOf="@id/item_main_button"
            app:layout_constraintBottom_toBottomOf="@id/item_main_button"
            app:layout_constraintStart_toStartOf="@id/item_main_button"
            app:layout_constraintEnd_toEndOf="@id/item_main_button"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
